# theater.py

./: .editorconfig  AGENTS.md  flake.nix  pyproject.toml
tests/: unix_echo.bats
theatre/: context.py  interfaces.py  repl.py  threaded_theatre.py  unix_echo.py  utils.py
theatre/tests/: test_cancellable_task.py  test_mailbox.py  test_threaded_theatre.py
