[project]
name = "theatre-py"
version = "0.0.1"
description = ''
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Charles Langlois", email = "contact@charleslanglois.dev" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
    "anyio[trio]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["theatre"]

[tool.pytest.ini_options]
testpaths = ["theatre"]
python_files = ["tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
src = ["theatre"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.9.0",
]
